# gst-live

./: .gitignore  CMakeLists.txt  main.cpp  run.sh
videoplug/: CMakeLists.txt  custom.h  gstvideoplug.cpp  gstvideoplug.h
